# trade-master-ai

./: .env.example  .gitignore  .prettierignore  ACCESSIBILITY-AUDIT.md  DEPLOYMENT-CHECKLIST.md  FINAL-IMPLEMENTATION-SUMMARY.md  FINAL-STATUS.md  IMPLEMENTATION-PROGRESS.md  IMPLEMENTATION-STRATEGY.md  MIGRATION.md  MONITORING.md  PHASE-0-REMAINING-WORK.md  PHASE-0-STATUS.md  PHASE-0.1-COMPLETE.md  PHASE-0.2-COMPLETE.md  PHASE-1-SUMMARY.md  PHASES-2-3-4-SUMMARY.md  PHASES-5-8-SUMMARY.md  Phase01.md  Phase5-8.md  QUALITY-IMPROVEMENT-PLAN.md  README.md  WORLD-CLASS-QUALITY-REPORT.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  trademaster-ai-features.md  trademaster-ai-phase-0-prompts.md  trademaster-ai-stack-override-no-supabase.md  turbo.json
apps/api/: .env.example  Cargo.toml  README.md
apps/api/docs/: API.md
apps/api/migrations/: 001_users_and_auth.sql  002_tags.sql  003_trades.sql  004_trade_tags.sql  005_trade_legs.sql  006_trade_media.sql  007_daily_plans.sql  008_ai_reviews.sql  009_psychology.sql  010_playbook.sql  011_risk_and_scoring.sql  012_social_and_system.sql  013_periodic_reviews.sql  README.md
apps/api/src/: config.rs  error.rs  main.rs  state.rs
apps/api/src/middleware/: auth.rs
apps/api/src/models/: ai_review.rs  auth.rs  mod.rs  planning.rs  playbook.rs  psychology.rs  review.rs  tag.rs  trade.rs  user.rs
apps/api/src/routes/: ai_review.rs  analytics.rs  auth.rs  csv.rs  health.rs  mod.rs  planning.rs  playbook.rs  psychology.rs  review.rs  risk.rs  tags.rs  trades.rs
apps/web/: COMPONENTS.md  (+7 more)
(+87 files in other folders)
